add room api
