# jitsi-api/constants/model.const.js
@@ -1,3 +1,4 @@
 module.exports = {
   USER: 'User',
+  ROOM: 'Room',
 }
