# jitsi-api/routes/rooms.route.js
@@ -1,0 +1,5 @@
+module.exports = (app) => {
+  const rooms = require('../controllers/rooms.controller')
+
+  app.route('/api/rooms').get(rooms.list).post(rooms.create)
+}
